--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="page_main">
         <section class="about-us">
             <h2 class="h2-title">О нас</h2>
-            <img src="images/egg.jpg" alt="Сервировка стола в европейском стиле." width="445px" height="465px">
+            <img src="images/egg.jpg" alt="Сервировка стола в европейском стиле." width="445" height="465">
             <p class="some-text">Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
             <p class="some-text">Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: «Да! Это именно то, что действительно достойно моего дома!»</p>
             <dl class="about-us_advantages">
@@ -42,24 +42,24 @@
             <h2 class="h2-title">Наши работы</h2>
             <h3 class="our-works_title">Квартира-студия 30 кв.м.</h3>
             <p class="some-text">В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
-            <img src="images/work_2.jpg" alt="Дизайн открытой кухни в виде барной стойки." width="692px" height="451px">
-            <img src="images/work_3.jpg" alt="Дизайн гостинной выполненный в светлых тонах." width="692px" height="451px">
-            <img src="images/work_4.jpg" alt="Белая ванная с пальмой на фоне серых обоев." width="488px" height="451px">
+            <img src="images/work_2.jpg" alt="Дизайн открытой кухни в виде барной стойки." width="692" height="451">
+            <img src="images/work_3.jpg" alt="Дизайн гостинной выполненный в светлых тонах." width="692" height="451">
+            <img src="images/work_4.jpg" alt="Белая ванная с пальмой на фоне серых обоев." width="488" height="451">
             <a class="link" href="#">Смотреть ещё</a>
         </section>
         <section class="our-team">
             <h2 class="h2-title">Команда</h2>
             <ul class="team_list">
                 <li class="team_item">
-                    <img src="images/team_1.jpg" alt="Девушка с рыжими вьющимися волосами с открытой улыбкой." width="320px" height="253px">
+                    <img src="images/team_1.jpg" alt="Девушка с рыжими вьющимися волосами с открытой улыбкой." width="320" height="253">
                     <p class="some-text">Это Маша, наш главный дизайнер. Она отвечает за дизайн-проект, приезжает к вам домой, общается и помогает сделать вашу квартиру красивой и уютной.</p>
                 </li>
                 <li class="team_item">
-                    <img src="images/team_2.jpg" alt="Девушка со светлыми волосами задумчивым взглядом смотрит на вас." width="320px" height="253px">
+                    <img src="images/team_2.jpg" alt="Девушка со светлыми волосами задумчивым взглядом смотрит на вас." width="320" height="253">
                     <p class="some-text">С нашим менеджером Сашей вы познакомитесь в первую очередь. Она проконсультирует вас, соберёт все документы и ответит на все вопросы.</p>
                 </li>
                 <li class="team_item">
-                    <img src="images/team_3.jpg" alt="Девушка с длинными волосами мило вам улыбается." width="320px" height="253px">
+                    <img src="images/team_3.jpg" alt="Девушка с длинными волосами мило вам улыбается." width="320" height="253">
                     <p class="some-text">Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</p>
                 </li>
             </ul>
@@ -87,8 +87,8 @@
                 <p class="some-text">Буду советовать и своим друзьям к вам обращаться!»</p>
             </blockquote>
             <cite class="autor">АННА БЕЛОВСКАЯ</cite>
-            <img src="images/review_1.jpg" alt="Широкая светлая гостинная для семейного отдыха." width="407px" height="272px">
-            <img src="images/review_2.jpg" alt="Открытая кухня с паркетным полом и широким панорамным окном." width="407px" height="272px">
+            <img src="images/review_1.jpg" alt="Широкая светлая гостинная для семейного отдыха." width="407" height="272">
+            <img src="images/review_2.jpg" alt="Открытая кухня с паркетным полом и широким панорамным окном." width="407" height="272">
         </section>
         <aside class="request">
             <h2 class="h2-title">Оставить заявку</h2>
@@ -99,10 +99,10 @@
                 <button class="button">Оставить заявку</button>
             </form>
         </aside>
-        <img src="images/map.jpg" alt="Карта с нашим офисом" width="590px" height="694px">
+        <img src="images/map.jpg" alt="Карта с нашим офисом" width="590" height="694">
     </main>
     <footer>
-        <a class="link" href="#">+7 (981) 857-46-24</a>
+        <a class="link" href="tel:+79818574624">+7 (981) 857-46-24</a>
         <a class="link" href="#">
             <address class="link">г. Санкт-петербург, ул. Большая Конюшенная, 19</address>
         </a>
