--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="page_main">
         <section class="about-us">
             <h2 class="h2-title">О нас</h2>
-            <img src="images/egg.jpg" alt="Сервировка стола в европейском стиле." width="445" height="465">
+            <img src="images/table.jpg" alt="Сервировка стола в европейском стиле." width="445" height="465">
             <p class="some-text">Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
             <p class="some-text">Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: «Да! Это именно то, что действительно достойно моего дома!»</p>
             <dl class="about-us_advantages">
