Базовая стилизация хэдера
Сделал базовую стилизацию хэдера и поправил некоторые классы.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page_header">
         <h1 class="visually-hidden">Студия дизайна SCANDY</h1>
         <nav class="header_navigation">
-            <a class="logo link" href="#">SCANDI</a>
+            <a class="logo link" href="#"><img src="images/logo.svg" alt="Логотип компании" width="25" height="25">SCANDI</a>
             <ul class="header_navigation_list">
                 <li class="header_navigation_item">О компании</li>
                 <li class="header_navigation_item">Портфолио</li>
@@ -22,7 +22,7 @@
         </nav>
         <h2 class="h2-title">Поможем сделать вашу квартиру уютнее</h2>
         <p class="some-text">Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку </p>
-        <a class="link" href="#">Оставить заявку</a>
+        <a class="button_request link" href="#">Оставить заявку</a>
     </header>
     <main class="page_main">
         <section class="about-us">
