Базовая стилизация мэйна
Выполнил базовую стилизацию мэйна. Необходимо стилизовать кнопки слайдера и поле ввода в заявке.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </ul>
             <a class="link" href="tel:+79818574624">+7 (981) 857-46-24</a>
         </nav>
-        <h2 class="h2-title">Поможем сделать вашу квартиру уютнее</h2>
+        <h2 class="header_h2-title">Поможем сделать вашу квартиру уютнее</h2>
         <p class="some-text">Подбираем текстиль, мебель и аксессуары под ваш интерьер, находим магазины и помогаем организовать доставку </p>
         <a class="button_request link" href="#">Оставить заявку</a>
     </header>
     <main class="page_main">
         <section class="about-us">
-            <h2 class="h2-title">О нас</h2>
+            <h2 class="main_h2-title">О нас</h2>
             <img src="images/table.jpg" alt="Сервировка стола в европейском стиле." width="445" height="465">
             <p class="some-text">Премиальный европейский текстиль — одно из самых главных направлений работы коллектива. Создавать неповторимые интерьеры для наших дорогих клиентов, уделяя внимание мельчайшим деталям — вот то,  что по-настоящему вдохновляет дизайнеров нашей студии.</p>
             <p class="some-text">Наш коллектив сделает все, чтобы после сотрудничества с нами,  Вам было приятно сказать: «Да! Это именно то, что действительно достойно моего дома!»</p>
@@ -40,16 +40,18 @@
             </dl>
         </section>
         <section class="our-works">
-            <h2 class="h2-title">Наши работы</h2>
-            <h3 class="our-works_title">Квартира-студия 30 кв.м.</h3>
-            <p class="some-text">В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+            <h2 class="main_h2-title">Наши работы</h2>
+            <div class="first-image_container">
+                <h3 class="our-works_title">Квартира-студия 30 кв.м.</h3>
+                <p class="some-text">В квартире были светлые стены и тёплые цвета. Мы сконцентрировались на отсылках к природе и сделали ребятам уютный интерьер, отсылающий к виллам островов Бали.</p>
+            </div>
             <img src="images/work_2.jpg" alt="Дизайн открытой кухни в виде барной стойки." width="692" height="451">
             <img src="images/work_3.jpg" alt="Дизайн гостинной выполненный в светлых тонах." width="692" height="451">
             <img src="images/work_4.jpg" alt="Белая ванная с пальмой на фоне серых обоев." width="488" height="451">
-            <a class="link" href="#">Смотреть ещё</a>
+            <a class="our-works_more link" href="#">Смотреть ещё</a>
         </section>
         <section class="our-team">
-            <h2 class="h2-title">Команда</h2>
+            <h2 class="main_h2-title">Команда</h2>
             <ul class="team_list">
                 <li class="team_item">
                     <img src="images/team_1.jpg" alt="Девушка с рыжими вьющимися волосами с открытой улыбкой." width="320" height="253">
@@ -64,7 +66,7 @@
                     <p class="some-text">Катя тоже занимается дизайном. Она всегда находит общий язык с клиентами и точно знает, как обустроить дом так, чтобы вам понравилось.</p>
                 </li>
             </ul>
-            <h2 class="h2-title">Как мы работаем</h2>
+            <h2 class="main_h2-title">Как мы работаем</h2>
             <ol class="our-team_work_list">
                 <li class="our-team_work_item">
                     <p class="some-text">Знакомимся, выезжаем на объект, утверждаем концепцию, подписываем договор.</p>
@@ -81,7 +83,7 @@
             </ol>
         </section>
         <section class="slider">
-            <h2 class="h2-title">Отзывы</h2>
+            <h2 class="main_h2-title">Отзывы</h2>
             <blockquote class="citation">
                 <p class="some-text">«Восторг! Спасибо, за комфортную жизнь. Очень рада, что выбрала вашу студию для украшения своего дома.</p>
                 <p class="some-text">Работа шла быстро, было очень приятно общаться и взаимодествовать с сотрудниками. Не ожидала, что это будет так легко!</p>
@@ -92,12 +94,12 @@
             <img src="images/review_2.jpg" alt="Открытая кухня с паркетным полом и широким панорамным окном." width="407" height="272">
         </section>
         <aside class="request">
-            <h2 class="h2-title">Оставить заявку</h2>
+            <h2 class="main_h2-title">Оставить заявку</h2>
             <form class="request_form">
                 <p class="some-text">Оставьте свои контакты. Менеджер перезвонит в удобное вам время и ответит на все вопросы.</p>
                 <input type="text" placeholder="Ваше имя">
                 <input type="tel" placeholder="Введите телефон">
-                <button class="button">Оставить заявку</button>
+                <button class="aside_button button_request">Оставить заявку</button>
             </form>
         </aside>
         <img src="images/map.jpg" alt="Карта с нашим офисом" width="590" height="694">
