Базовая стилизация футера
Выполнил базовую стилизацию футера и проверку валидатором.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <a class="link" href="#">
             <address class="link">г. Санкт-петербург, ул. Большая Конюшенная, 19</address>
         </a>
-        <strong>ИП Королёва А.А.</strong>
+        <strong class="owner_name">ИП Королёва А.А.</strong>
     </footer>
 </body>
 </html>
